istio-resources/translator-gateway.yml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: translator-gateway
  namespace: translator
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "alterai.pl"
    tls:
      httpsRedirect: false
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - "alterai.pl"
    tls:
      mode: SIMPLE
      credentialName: alterai-pl-tls
