istio-resources/postgres-virtualservice.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: postgres-vs
  namespace: todoapp
spec:
  hosts:
  - "postgres.todoapp.svc.cluster.local"
  gateways:
  - mesh
  http:
  - route:
    - destination:
        port:
          number: 5432
        host: postgres.todoapp.svc.cluster.local
