istio-resources/translator-virtualservice.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: translator-vs
  namespace: translator
spec:
  hosts:
  - "alterai.pl"
  gateways:
  - translator/translator-gateway
  - mesh
  http:
  - route:
    - destination:
        port:
          number: 8000
        host: translator.translator.svc.cluster.local
